--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <HEAD>
 
     <TITLE>
-        Probability Test
+        Programming Notes
     </TITLE>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='style.css'>
@@ -12,11 +12,11 @@
 </HEAD>
 
 <BODY>
-    <h1> IBM Cloud : Notes </h1>
+    <h1> Programming Notes</h1>
     <div class='table'>
         <div class='row'>
             <div class='cell'>
-                <p class='titleHeading'> Javascript Notes </p>
+                <p class='titleHeading'> Javascript Notes</p>
                 <li> 'loft'.charCodeAt(0) </li>
 		<li> output: 108 </li>
 		<li> String.fromCharCode(85)</li>
